# pcd-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md  getting_started.md  introduction.md  reading_pcd.md  roadmap.md  static_vs_dynamic.md  writing_pcd.md
book/src/api/: index.md
book/src/architecture/: core_components.md  data_flow.md  overview.md
book/src/design/: reader.md  writer.md
book/src/pcd_format/: binary_encoding.md  data_types.md  header.md  specification.md
book/src/roadmap/: completed.md  future.md  status.md
examples/: read_dynamic.rs  read_static.rs  write_dynamic.rs  write_static.rs
pcd-rs/: Cargo.toml
pcd-rs-derive/: Cargo.toml  LICENSE
pcd-rs-derive/src/: common.rs  derive.rs  derive_de.rs  derive_read.rs  derive_ser.rs  derive_write.rs  lib.rs  parse.rs  utils.rs
pcd-rs/examples/: read_compressed.rs  read_dynamic.rs  read_static.rs  test_empty.rs  test_legacy_versions.rs  test_pcl_bunny.rs  write_dynamic.rs  write_read_compressed.rs  write_static.rs
pcd-rs/src/: error.rs  lib.rs  lzf.rs  metas.rs  reader.rs  record.rs  traits.rs  utils.rs  writer.rs
pcd-rs/test_files/: corrupt_compressed.pcd  dump_ascii_untyped.pcd  empty_compressed_debug.pcd  highly_compressed.pcd  highly_uncompressed.pcd  large_compressed.pcd  mixed_types_compressed.pcd  output_binary.pcd  output_compressed.pcd  single_compressed.pcd  test_unsupported_version.pcd  test_v05_ascii.pcd  test_v05_no_viewpoint.pcd  test_v06_binary.pcd  test_v06_mixed_types.pcd  test_v5_compressed.pcd  test_v6_compressed.pcd
pcd-rs/tests/: read_typed.rs  read_untyped.rs  test_compressed.rs  test_compressed_edge_cases.rs  test_legacy_versions.rs  write.rs  write_typed.rs  write_untyped.rs
src/: error.rs  lib.rs  metas.rs  prelude.rs  reader.rs  record.rs  seq_reader.rs  seq_writer.rs  traits.rs  utils.rs  writer.rs
tests/: load.rs  read.rs  seq_read.rs  seq_write.rs  write.rs
