[package]
name = "pcd-rs"
version = "0.6.2"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "Working with PCD file format in Rust"
categories = ["parsing"]
documentation = "https://docs.rs/pcd-rs/"
repository = "https://github.com/jerry73204/pcd-rs"
homepage = "https://github.com/jerry73204/pcd-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
byteorder = "1.3"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.3"
pcd-rs-derive = { version = "0.4.0", path = "pcd-rs-derive" }
