[package]
name = "pcd-rs"
version = "0.8.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "Working with PCD file format in Rust"
categories = ["parsing"]
documentation = "https://docs.rs/pcd-rs/"
repository = "https://github.com/jerry73204/pcd-rs"
homepage = "https://github.com/jerry73204/pcd-rs"
readme = "README.md"
license-file = "LICENSE"

[workspace]
members = [
    "pcd-rs-derive",
]

[dependencies]
byteorder = "1.4.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
regex = "1.5.4"
pcd-rs-derive = { version = "0.5.0", path = "pcd-rs-derive" }
