[package]
name = "pcd-rs-derive"
version = "0.11.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Derive macros for pcd-rs crate"
documentation = "https://docs.rs/pcd-rs-derive/"
repository = "https://github.com/jerry73204/pcd-rs"
homepage = "https://github.com/jerry73204/pcd-rs"
license-file = "LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
syn = { version = "2.0.85", features = ["extra-traits"] }
quote = "1.0.37"
regex = "1.11.1"
once_cell = "1.20.2"
unzip-n = "0.1.2"
itertools = "0.13.0"
