[package]
name = "pcd-rs"
version = "0.10.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Working with PCD file format in Rust"
categories = ["parsing"]
documentation = "https://docs.rs/pcd-rs/"
repository = "https://github.com/jerry73204/pcd-rs"
homepage = "https://github.com/jerry73204/pcd-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
byteorder = "1.5.0"
anyhow = "1.0.81"
thiserror = "1.0.58"
regex = "1.10.4"
pcd-rs-derive = { version = "0.6.1", path = "../pcd-rs-derive", optional = true }
num-traits = "0.2.18"

[features]
derive = ["pcd-rs-derive"]

[dev-dependencies]
itertools = "0.12.1"


[[example]]
name = "write_static"
required-features = ["derive"]

[[example]]
name = "read_static"
required-features = ["derive"]

[package.metadata.docs.rs]
features = ["derive"]
