[package]
name = "pcd-rs"
version = "0.11.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "Working with PCD file format in Rust"
categories = ["parsing"]
documentation = "https://docs.rs/pcd-rs/"
repository = "https://github.com/jerry73204/pcd-rs"
homepage = "https://github.com/jerry73204/pcd-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.65"
regex = "1.11.1"
pcd-rs-derive = { version = "0.11.0", path = "../pcd-rs-derive", optional = true }
num-traits = "0.2.19"
itertools = "0.13.0"

[features]
derive = ["pcd-rs-derive"]

[[example]]
name = "write_static"
required-features = ["derive"]

[[example]]
name = "read_static"
required-features = ["derive"]

[dev-dependencies]
eyre = "0.6.12"

[package.metadata.docs.rs]
features = ["derive"]
